--- a/package.json
+++ b/package.json
@@ -28,14 +28,14 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
-  },
-  "devDependencies": {
+    "redux-thunk": "^2.2.0",
     "@babel/core": "^7.1.2",
     "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
-    "@babel/register": "^7.0.0",
+    "@babel/register": "^7.0.0"
+  },
+  "devDependencies": {
     "babel-eslint": "^8.2.6",
     "babel-jest": "^21.2.0",
     "babel-loader": "^8.0.4",
