--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0"
+    "express": "^4.16.3"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.6",
@@ -49,7 +50,6 @@
     "eslint-loader": "^1.9.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-react": "^7.5.1",
-    "express": "^4.16.3",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "husky": "^0.14.3",
     "jest": "^21.2.1",
