--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
-    "@babel/register": "^7.0.0"
+    "@babel/register": "^7.0.0",
     "express": "^4.16.3"
   },
   "devDependencies": {
